      to INT32_MAX.
    - Fix a potential race condition in the rpm installer.  Found by
      Stefan Nordhausen.
    - Try to fix eventdns warnings once and for all: do not treat a dns rcode
      of 2 as indicating that the server is completely bad; it sometimes
      means that the server is just bad for the request in question. (may fix
      the last of bug 326.)


Changes in version 0.1.2.8-beta - 2007-02-26
  o Major bugfixes (crashes):
    - Stop crashing when the controller asks us to resetconf more than
      one config option at once. (Vidalia 0.0.11 does this.)
    - Fix a crash that happened on Win98 when we're given command-line
      arguments: don't try to load NT service functions from advapi32.dll
      except when we need them. (Bug introduced in 0.1.2.7-alpha;
      resolves bug 389.)
    - Fix a longstanding obscure crash bug that could occur when
      we run out of DNS worker processes. (Resolves bug 390.)

  o Major bugfixes (hidden services):
    - Correctly detect whether hidden service descriptor downloads are
      in-progress. (Suggested by Karsten Loesing; fixes bug 399.)

  o Major bugfixes (accounting):
    - When we start during an accounting interval before it's time to wake
      up, remember to wake up at the correct time. (May fix bug 342.)

  o Minor bugfixes (controller):
    - Give the controller END_STREAM_REASON_DESTROY events _before_ we
      clear the corresponding on_circuit variable, and remember later
      that we don't need to send a redundant CLOSED event.  (Resolves part
      3 of bug 367.)
    - Report events where a resolve succeeded or where we got a socks
      protocol error correctly, rather than calling both of them
      "INTERNAL".
    - Change reported stream target addresses to IP consistently when
      we finally get the IP from an exit node.
    - Send log messages to the controller even if they happen to be very
      long.

  o Minor bugfixes (other):